@@ -62,3 +62,6 @@
 	longer than 1024 bytes.
 2024-12-02 Fred Gleason <fredg@paravelsystems.com>
 	* Incremented the package version to v2.0.1.
+2024-02-26 Fred Gleason <fredg@paravelsystems.com>
+	* Fixed a bug in 'Profile::loadFile()' that caused a segfault
+	when an error occurred but no 'err_msg' parameter was supplied.
